I changed background color and banner logo

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #403B4A;
+$secondary-color: #E7E9BB;
 
 $white-color: #fff;
 
